antlrConversion/ClassDiagramParser.py
# Generated from ClassDiagram.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ClassDiagramParser ( Parser ):

    grammarFileName = "ClassDiagram.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Enumerations:'", "'('", "')'", "','", 
                     "'Classes:'", "'abstract'", "'const'", "'[]'", "'='", 
                     "'contain'", "'inherit'", "'associate'", "'(*)'", "'..'", 
                     "'*'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "STRING", "NUM", "WS" ]

    RULE_classDiagram = 0
    RULE_enumerations = 1
    RULE_enumeration = 2
    RULE_literals = 3
    RULE_classes = 4
    RULE_classDefinition = 5
    RULE_attributes = 6
    RULE_attribute = 7
    RULE_relationships = 8
    RULE_composition = 9
    RULE_inheritance = 10
    RULE_association = 11
    RULE_mul = 12
    RULE_attributeType = 13

    ruleNames =  [ "classDiagram", "enumerations", "enumeration", "literals", 
                   "classes", "classDefinition", "attributes", "attribute", 
                   "relationships", "composition", "inheritance", "association", 
                   "mul", "attributeType" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    STRING=16
    NUM=17
    WS=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ClassDiagramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def enumerations(self):
            return self.getTypedRuleContext(ClassDiagramParser.EnumerationsContext,0)


        def classes(self):
            return self.getTypedRuleContext(ClassDiagramParser.ClassesContext,0)


        def relationships(self):
            return self.getTypedRuleContext(ClassDiagramParser.RelationshipsContext,0)


        def getRuleIndex(self):
            return ClassDiagramParser.RULE_classDiagram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDiagram" ):
                listener.enterClassDiagram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDiagram" ):
                listener.exitClassDiagram(self)




    def classDiagram(self):

        localctx = ClassDiagramParser.ClassDiagramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_classDiagram)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 28
                self.enumerations()
                self.state = 29
                self.classes()
                self.state = 30
                self.relationships()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumerationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def enumeration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClassDiagramParser.EnumerationContext)
            else:
                return self.getTypedRuleContext(ClassDiagramParser.EnumerationContext,i)


        def getRuleIndex(self):
            return ClassDiagramParser.RULE_enumerations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumerations" ):
                listener.enterEnumerations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumerations" ):
                listener.exitEnumerations(self)




    def enumerations(self):

        localctx = ClassDiagramParser.EnumerationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_enumerations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(ClassDiagramParser.T__0)
            self.state = 36 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 35
                self.enumeration()
                self.state = 38 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==16):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumerationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(ClassDiagramParser.STRING, 0)

        def literals(self):
            return self.getTypedRuleContext(ClassDiagramParser.LiteralsContext,0)


        def getRuleIndex(self):
            return ClassDiagramParser.RULE_enumeration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumeration" ):
                listener.enterEnumeration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumeration" ):
                listener.exitEnumeration(self)




    def enumeration(self):

        localctx = ClassDiagramParser.EnumerationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_enumeration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(ClassDiagramParser.STRING)
            self.state = 41
            self.match(ClassDiagramParser.T__1)
            self.state = 42
            self.literals()
            self.state = 43
            self.match(ClassDiagramParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(ClassDiagramParser.STRING)
            else:
                return self.getToken(ClassDiagramParser.STRING, i)

        def getRuleIndex(self):
            return ClassDiagramParser.RULE_literals

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiterals" ):
                listener.enterLiterals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiterals" ):
                listener.exitLiterals(self)




    def literals(self):

        localctx = ClassDiagramParser.LiteralsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_literals)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(ClassDiagramParser.STRING)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 46
                self.match(ClassDiagramParser.T__3)
                self.state = 47
                self.match(ClassDiagramParser.STRING)
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClassDiagramParser.ClassDefinitionContext)
            else:
                return self.getTypedRuleContext(ClassDiagramParser.ClassDefinitionContext,i)


        def getRuleIndex(self):
            return ClassDiagramParser.RULE_classes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClasses" ):
                listener.enterClasses(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClasses" ):
                listener.exitClasses(self)




    def classes(self):

        localctx = ClassDiagramParser.ClassesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_classes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(ClassDiagramParser.T__4)
            self.state = 55 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 54
                self.classDefinition()
                self.state = 57 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==6 or _la==16):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(ClassDiagramParser.STRING, 0)

        def attributes(self):
            return self.getTypedRuleContext(ClassDiagramParser.AttributesContext,0)


        def relationships(self):
            return self.getTypedRuleContext(ClassDiagramParser.RelationshipsContext,0)


        def getRuleIndex(self):
            return ClassDiagramParser.RULE_classDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDefinition" ):
                listener.enterClassDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDefinition" ):
                listener.exitClassDefinition(self)




    def classDefinition(self):

        localctx = ClassDiagramParser.ClassDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 59
                self.match(ClassDiagramParser.T__5)


            self.state = 62
            self.match(ClassDiagramParser.STRING)
            self.state = 63
            self.match(ClassDiagramParser.T__1)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7 or _la==16:
                self.state = 64
                self.attributes()


            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 7168) != 0):
                self.state = 67
                self.relationships()


            self.state = 70
            self.match(ClassDiagramParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClassDiagramParser.AttributeContext)
            else:
                return self.getTypedRuleContext(ClassDiagramParser.AttributeContext,i)


        def getRuleIndex(self):
            return ClassDiagramParser.RULE_attributes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributes" ):
                listener.enterAttributes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributes" ):
                listener.exitAttributes(self)




    def attributes(self):

        localctx = ClassDiagramParser.AttributesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attributes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.attribute()
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 73
                self.match(ClassDiagramParser.T__3)
                self.state = 74
                self.attribute()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributeType(self):
            return self.getTypedRuleContext(ClassDiagramParser.AttributeTypeContext,0)


        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(ClassDiagramParser.STRING)
            else:
                return self.getToken(ClassDiagramParser.STRING, i)

        def NUM(self):
            return self.getToken(ClassDiagramParser.NUM, 0)

        def getRuleIndex(self):
            return ClassDiagramParser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)




    def attribute(self):

        localctx = ClassDiagramParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 80
                self.match(ClassDiagramParser.T__6)


            self.state = 83
            self.attributeType()
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 84
                self.match(ClassDiagramParser.T__7)


            self.state = 87
            self.match(ClassDiagramParser.STRING)

            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 88
                self.match(ClassDiagramParser.T__8)
                self.state = 89
                _la = self._input.LA(1)
                if not(_la==16 or _la==17):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationshipsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def composition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClassDiagramParser.CompositionContext)
            else:
                return self.getTypedRuleContext(ClassDiagramParser.CompositionContext,i)


        def inheritance(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClassDiagramParser.InheritanceContext)
            else:
                return self.getTypedRuleContext(ClassDiagramParser.InheritanceContext,i)


        def association(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClassDiagramParser.AssociationContext)
            else:
                return self.getTypedRuleContext(ClassDiagramParser.AssociationContext,i)


        def getRuleIndex(self):
            return ClassDiagramParser.RULE_relationships

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationships" ):
                listener.enterRelationships(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationships" ):
                listener.exitRelationships(self)




    def relationships(self):

        localctx = ClassDiagramParser.RelationshipsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_relationships)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.state = 92
                self.composition()
                pass
            elif token in [11]:
                self.state = 93
                self.inheritance()
                pass
            elif token in [12]:
                self.state = 94
                self.association()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 97
                self.match(ClassDiagramParser.T__3)
                self.state = 101
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [10]:
                    self.state = 98
                    self.composition()
                    pass
                elif token in [11]:
                    self.state = 99
                    self.inheritance()
                    pass
                elif token in [12]:
                    self.state = 100
                    self.association()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompositionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mul(self):
            return self.getTypedRuleContext(ClassDiagramParser.MulContext,0)


        def STRING(self):
            return self.getToken(ClassDiagramParser.STRING, 0)

        def getRuleIndex(self):
            return ClassDiagramParser.RULE_composition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComposition" ):
                listener.enterComposition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComposition" ):
                listener.exitComposition(self)




    def composition(self):

        localctx = ClassDiagramParser.CompositionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_composition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(ClassDiagramParser.T__9)
            self.state = 109
            self.mul()
            self.state = 110
            self.match(ClassDiagramParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InheritanceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mul(self):
            return self.getTypedRuleContext(ClassDiagramParser.MulContext,0)


        def STRING(self):
            return self.getToken(ClassDiagramParser.STRING, 0)

        def getRuleIndex(self):
            return ClassDiagramParser.RULE_inheritance

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInheritance" ):
                listener.enterInheritance(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInheritance" ):
                listener.exitInheritance(self)




    def inheritance(self):

        localctx = ClassDiagramParser.InheritanceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_inheritance)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(ClassDiagramParser.T__10)
            self.state = 113
            self.mul()
            self.state = 114
            self.match(ClassDiagramParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssociationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mul(self):
            return self.getTypedRuleContext(ClassDiagramParser.MulContext,0)


        def STRING(self):
            return self.getToken(ClassDiagramParser.STRING, 0)

        def getRuleIndex(self):
            return ClassDiagramParser.RULE_association

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssociation" ):
                listener.enterAssociation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssociation" ):
                listener.exitAssociation(self)




    def association(self):

        localctx = ClassDiagramParser.AssociationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_association)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(ClassDiagramParser.T__11)
            self.state = 117
            self.mul()
            self.state = 118
            self.match(ClassDiagramParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MulContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(ClassDiagramParser.NUM)
            else:
                return self.getToken(ClassDiagramParser.NUM, i)

        def getRuleIndex(self):
            return ClassDiagramParser.RULE_mul

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMul" ):
                listener.enterMul(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMul" ):
                listener.exitMul(self)




    def mul(self):

        localctx = ClassDiagramParser.MulContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_mul)
        self._la = 0 # Token type
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.match(ClassDiagramParser.T__12)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.match(ClassDiagramParser.T__1)
                self.state = 122
                self.match(ClassDiagramParser.NUM)
                self.state = 123
                self.match(ClassDiagramParser.T__2)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.match(ClassDiagramParser.T__1)
                self.state = 125
                self.match(ClassDiagramParser.NUM)
                self.state = 126
                self.match(ClassDiagramParser.T__13)
                self.state = 127
                _la = self._input.LA(1)
                if not(_la==15 or _la==17):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 128
                self.match(ClassDiagramParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(ClassDiagramParser.STRING, 0)

        def getRuleIndex(self):
            return ClassDiagramParser.RULE_attributeType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributeType" ):
                listener.enterAttributeType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributeType" ):
                listener.exitAttributeType(self)




    def attributeType(self):

        localctx = ClassDiagramParser.AttributeTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_attributeType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(ClassDiagramParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





